[package]
name = "miniquad-render"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 2 # fast and small wasm

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dependencies]
egui-miniquad = "0.6"
egui = "0.14.2"
miniquad = { version = "=0.3.0-alpha.37" }
hashbrown = { version = "0.11", features = ["serde"] }
# a fork because original got a poor update
vtf = { git = "https://github.com/mrsteyk/vtf-rs.git" } # this crate pulls whole image with it :/
#image = "0.23.14"
half = "1.7"
serde_json = "1.0"
sha2 = "0.9"
hex = "0.4"
# we only ever need store from this crate according to dev wiki
zip = { version = "0.5", default-features = false }
#lzma-rs = "0.2"
gmod-lzma = { git = "https://github.com/mrsteyk/gmod-lzma-rs.git" }
bytesize = "1.1"